syntax = "proto3";

package notification;

service NotificationService {
  rpc sendEmail (data) returns (response);
}

message data {
  int64 orderId = 1;
  string username = 2;
  string email = 3;
}

message response {}